<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Bamboo</string>
    <string name="my_login">点击开启精彩之旅</string>
    <string name="my_register">没有账号立即加入</string>
    <string name="home_page">首页</string>
    <string name="start">开始</string>
    <string name="test_content">孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服</string>
    <string name="test_title">十多个考虑什么打开没地方煤矿</string>
    <string name="missOld">怀旧</string>
    <string name="testDate">1-29</string>
    <string name="testDiscuss">256</string>
    <string name="contentDescription">背景</string>
    <string name="menu_mine_order">我的订单</string>
    <string name="menu_mine_topic">我的话题</string>
    <string name="menu_safe">安全中心</string>
    <string name="menu_setting_changePwd">修改密码</string>
    <string name="menu_setting_changeInfo">修改资料</string>
    <string name="menu_exit">注销登录</string>
    <string name="boon">福利</string>
    <string name="news">资讯</string>
    <string name="gameLib">游戏库</string>
    <string name="community">社区</string>
    <string name="headimg">头像</string>
    <string name="appName">立方体游戏</string>
    <string name="search">搜索</string>
    <string name="share">分享</string>
    <string name="tel">手机号</string>
    <string name="verify_code">验证码</string>
    <string name="pwd">密码</string>
    <string name="get_verifyCode">获取验证码</string>
    <string name="download">下载</string>
    <string name="gameDescription">游戏图标</string>
    <string name="pwd_login">密码登录</string>
    <string name="verifyCode_login">验证码登录</string>
    <string name="QQlogin">QQ</string>
    <string name="wechatlogin">微信</string>
    <string name="sinalogin">新浪</string>
    <string name="other_login">第三方登录</string>
    <string name="toVerifyCodeLogin">切换至验证码登录</string>
    <string name="toPwdLogin">切换至密码登录</string>
    <string name="sure">确定</string>
    <string name="show_all">显示全部</string>
    <string name="developer_word">开发者的话</string>
    <string name="complain">投诉</string>
    <string name="gamebc">背景介绍</string>
    <string name="detailed">详细信息</string>
    <string name="downloadNum">下载量:</string>
    <string name="version">版本号:</string>
    <string name="size">大小:</string>
    <string name="updateTime">更新时间:</string>
    <string name="company">开发商:</string>
    <string name="unfollow">未关注</string>
    <string name="report">举报</string>
    <string name="asc">升序</string>
    <string name="desc">降序</string>
    <string name="reply">回复</string>
    <string name="ad">来自广告</string>
    <string name="extend">推广</string>
    <string name="recommend_discuss_num">%1$d</string>
    <string name="back">返回</string>
    <string name="find">发现</string>
    <string name="select_tag">选择标签</string>
    <string name="add">添加</string>
    <string name="zhuce">注册</string>
    <string name="recommend">推荐</string>
    <string name="near">附近</string>
    <string name="matters">动态</string>
    <string name="write">发布新内容</string>
    <string name="sendMsg">发消息</string>
    <string name="follow">关注</string>
    <string name="collect">收藏</string>
    <string name="dynamics">动态</string>
    <string name="contributes">投稿</string>
    <string name="message">消息</string>
    <string name="my_friend">我的好友</string>
    <string name="fans">粉丝</string>
    <string name="acclaim">赞</string>
    <string name="mine">\@我的</string>
    <string name="discuss">评论</string>
    <string name="add_friend">添加好友</string>
    <string name="menu_mine_history">历史记录</string>
    <string name="menu_mine_download">下载管理</string>
    <string name="menu_mine_collect">我的收藏</string>
    <string name="prise">称赞</string>
    <string name="booing">差评</string>
    <string name="coin">打赏</string>
    <string name="cancel">取消</string>
    <string name="latter_show">添加至稍后在看列表</string>
    <string name="feedback">举报</string>
    <string name="blood">恐怖血腥</string>
    <string name="sexy">色情暴力</string>
    <string name="nausea">内容恶心</string>
    <string name="inconformity">封面与事实不符</string>
    <string name="lose_interest">不感兴趣</string>
    <string name="apply">申请</string>
    <string name="apply_contact">申请列表</string>
    <string name="declare">未经允许禁止转载</string>
    <string name="person_im">账号资料</string>
    <string name="nickname">昵称</string>
    <string name="uid">UID</string>
    <string name="card">二维码名片</string>
    <string name="birthday">出生年月</string>
    <string name="synopsis">简介</string>
    <string name="sex">性别</string>
    <string name="choose">从文件夹选择</string>
    <string name="camera">拍照</string>
    <string name="write_matters">发布动态</string>

</resources>
