<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_change_im_camera"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/camera"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/dialog_change_im_choose"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/choose"
        android:textSize="16sp" />
    <TextView
        android:id="@+id/dialog_change_im_cancel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:background="@color/holo_red_light"
        android:textSize="16sp" />
</LinearLayout>