<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_cl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/toolbar_gradient_background"
    tools:context=".RegisterActivity"
    tools:layout_editor_absoluteY="25dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/register_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/transparent"
        android:fitsSystemWindows="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@mipmap/back"
        app:title="@string/zhuce"
        app:titleTextColor="@color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/register_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/login"
        android:transitionName="loginFab"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_tel_et_inputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/tel"
        android:textColorHint="@color/white"
        app:counterEnabled="true"
        app:counterMaxLength="11"
        app:counterOverflowTextAppearance="@style/MyTextInputLayoutCountOverFlowStyle"
        app:counterTextAppearance="@style/MyTextInputLayoutCountStyle"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/MyTextInputLayoutErrorStyle"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_toolbar">

        <EditText
            android:id="@+id/register_tel_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_verifyCode_et_inputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_tel_et_inputLayout"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_toStartOf="@id/register_getVerifyCode_btn"
        android:hint="@string/verify_code"
        android:textColorHint="@color/white"
        app:counterEnabled="true"
        app:counterMaxLength="6"
        app:counterOverflowTextAppearance="@style/MyTextInputLayoutCountOverFlowStyle"
        app:counterTextAppearance="@style/MyTextInputLayoutCountStyle"
        app:errorTextAppearance="@style/MyTextInputLayoutErrorStyle"
        app:hintEnabled="true"
        app:layout_constraintEnd_toStartOf="@+id/register_getVerifyCode_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_tel_et_inputLayout">

        <EditText
            android:id="@+id/register_verifyCode_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/register_getVerifyCode_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_tel_et_inputLayout"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:background="@drawable/get_verifycode_btn_background"
        android:text="@string/get_verifyCode"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toBottomOf="@+id/register_verifyCode_et_inputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/register_verifyCode_et_inputLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_pwd_et_inputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_verifyCode_et_inputLayout"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textColorHint="@color/white"
        app:counterOverflowTextAppearance="@style/MyTextInputLayoutCountOverFlowStyle"
        app:counterTextAppearance="@style/MyTextInputLayoutCountStyle"
        app:errorTextAppearance="@style/MyTextInputLayoutErrorStyle"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_verifyCode_et_inputLayout">

        <EditText
            android:id="@+id/register_pwd_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/pwd"
            android:inputType="textPassword"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>


    <include
        android:id="@+id/register_other_login"
        layout="@layout/layout_other_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/register_sure"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_pwd_et_inputLayout" />

    <Button
        android:id="@+id/register_sure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/white_btn_background"
        android:text="@string/sure"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_other_login" />

</androidx.constraintlayout.widget.ConstraintLayout>